<resources>
    <string name="app_name">Ikamantab</string>
    <string name="app_name_caps">IKAMANTAB</string>
    <string name="app_full_name_caps">IKATAN ALUMNI MAN TAMBAKBERAS</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">SELANJUTNYA</string>
    <string name="skip">LEWATI</string>
    <string name="start">SAYA MENGERTI</string>

    <string name="slide_1_title">Selamat Datang!</string>
    <string name="slide_1_desc">Ikatan Keluarga Alumni Man Tambakberas!</string>

    <string name="slide_2_title">Cari Teman</string>
    <string name="slide_2_desc">Cari teman-teman Man anda disni.</string>

    <string name="slide_3_title">Daftar &amp; Masuk</string>
    <string name="slide_3_desc">Daftar akun baru dan login untuk terhubung dengan teman anda</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="forgotpassword">Lupa Password</string>
    <string name="notregistered">Belum punya akun?</string>
    <string name="register_now">Daftar sekarang!</string>
    <string name="signin">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="authenticating">Ototentikasi</string>
    <string name="loginnull">Form Email dan Password tidak boleh kosong!</string>
    <string name="emailnotvalid">Format Email tidak valid!</string>
    <string name="checkconnection">Gagal login, periksa koneksi internet anda!</string>
    <string name="notmatch">Email atau Password salah!</string>
    <string name="send">Kirim</string>

    <!--register-->
    <string name="jurusan_title">Jurusan</string>
    <string name="asrama_title">Asrama</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="formnull">Form tidak boleh kosong!</string>
    <string name="angkatan">Angkatan</string>

    <!--beranda-->
    <string name="home">Beranda</string>
    <string name="welcome_message">Selamat datang IKAMANTAB\nuntuk memulai silahkan update profil Anda</string>
    <string name="update_prof">Update Profile</string>
    <string name="share">Share</string>
    <string name="mungkinkenal">Mungkin Anda Kenal</string>
    <string name="teman">Teman</string>
    <string name="agenda">Agenda</string>
    <string name="forum">Forum</string>
    <string name="publikasi">Publikasi</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="logout">Keluar</string>
    <string name="iamantarab">IKA MANTAB</string>

    <!--friends-->
    <string name="connecting_people">Terhubung dengan teman-teman Anda\nsilahkan cari teman Anda</string>
    <string name="search">Cari</string>
    <string name="alone">Anda belum memiliki daftar teman\nsilahkan cari teman Anda</string>
    <string name="search_friends">Cari Teman</string>

    <!--profile-->
    <string name="profile">Profil</string>
    <string name="usernotfriends">Pengguna yang belum menjadi teman Anda\ntidak dapat melihat data detail Anda</string>
    <string name="addfriend">Tambahkan Teman</string>
    <string name="cancel">Batalkan</string>
    <string name="requestfriend">Ingin menjadi teman anda</string>
    <string name="friendreq">Permintaan teman</string>
    <string name="confirm">Konfirmasi</string>

    <string name="bio">Biografi</string>
    <string name="profesi">Profesi</string>
    <string name="pelatihan">Pelatihan</string>
    <string name="penghargaan">Penghargaan</string>
    <string name="referensi">Referensi Rekomendasi</string>
    <string name="minat">Minat Profesi</string>

    <string name="save">Simpan</string>
    <string name="data_null">Belum ada data profesi / pengalaman, silahkan\ntambahkan data Anda.</string>
    <string name="edit">Ubah</string>
    <string name="add">Tambah</string>
    <string name="setting">Setalan</string>
</resources>
